# yrc

./: .gitmodules  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  eval.py  eval_agent.py  eval_coord_policy.py  flags.py  pyproject.toml  requirements.txt  setup.py  train.py  train_agent.py  train_coord_policy.py
YRC/: __init__.py
YRC/algorithms/: __init__.py  logit.py  ood.py  random.py  rl.py
YRC/core/: algorithm.py  environment.py  evaluator.py  policy.py
YRC/models/: base.py  utils.py
YRC/policies/: __init__.py  base.py  logit.py  ood.py  rl.py  wrappers.py
configs/: common.yaml  minigrid_ppo.yaml  procgen_agent.yaml  procgen_always.yaml  procgen_ask_every_k.yaml  procgen_logit.yaml  procgen_ood.yaml  procgen_ppo.yaml  procgen_ppo_expert.yaml  procgen_ppo_novice.yaml  procgen_pyod.yaml  procgen_random.yaml  procgen_skyline.yaml  procgen_threshold.yaml
docs/: api.rst  conf.py  index.rst
docs/source/: api.rst  conf.py  core_concepts.rst  index.rst  main_classes.rst  quickstart.rst
environments/: __init__.py
environments/procgen/: __init__.py  config.py
examples/: minigrid.py  minigrid_yrc.py  procgen_agent.py  procgen_ask_every_k.py  procgen_coord_policy.py  procgen_yrc.py
requirements/: requirements_minigrid.txt
yrc/: __init__.py
yrc/algorithms/: __init__.py  always.py  logit.py  ood.py  ppo.py  pyod.py  random.py
yrc/core/: algorithm.py  config.py  environment.py  evaluator.py  policy.py
yrc/environments/: __init__.py
yrc/models/: __init__.py  impala.py  ppo.py
yrc/policies/: __init__.py  always.py  logit.py  (+5 more)
(+67 files in other folders)
