[build-system]
requires = [
  "setuptools>=65",
]
build-backend = "setuptools.build_meta"

[project]
name = "yrc"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = [
  "omegaconf>=2.3.0",
  "gym>=0.26.2",
  "torch>=2.1.2",
  "wandb>=0.19.11",
  "scikit-learn",
  "numba"
]

[tool.setuptools]
packages = ["yrc"]
